[package]
name = "grproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.3.0", features = ["tokio"]}
iced_native = "0.4"
iced_wgpu = "0.4"
iced_winit = "0.3"
iced_web = "0.4"
async-std = { version = "1.8.0", features = ["attributes"] }
